I fixed the white space problem!! solution - display: block; on images!

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ img {
 }
 
 .icon img {
-    display: inline-block;
+    display: block;
 }
 
 .product {
